force-app/main/default/objects/Answer__c/Answer__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Answer</label>
    <nameField>
        <displayFormat>CFA-{0000}</displayFormat>
        <label>Clarity Form Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clarity Form Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>