force-app/main/default/objects/Answer__c/fields/ContentDocument__c.field-meta.xml
<CustomField>
    <fullName>ContentDocument__c</fullName>
    <label>ContentDocument</label>
    <length>18</length>
    <type>Text</type>
</CustomField>