force-app/main/default/objects/Answer__c/fields/ContentVersion__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion__c</fullName>
    <label>ContentVersion</label>
    <length>18</length>
    <type>Text</type>
</CustomField>