force-app/main/default/objects/Answer__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <label>Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>